--- a/bower.json
+++ b/bower.json
@@ -21,6 +21,7 @@
   },
   "devDependencies": {
     "angular-mocks": ">=1.2.x",
+    "DefinitelyTyped": "git://github.com/thgreasi/DefinitelyTyped.git",
     "jquery-simulate": "latest"
   }
 }
